# fmod_mp3_player

./: CMakeLists.txt  main.cpp
inc/: rdtsbc.h
lib/arm/: libfmod.so.13.20  libfmodL.so.13.20
lib/arm64/: libfmodL.so.13.20
lib/x86/: libfmod.so.13.20  libfmodL.so.13.20
